--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1155,7 +1155,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d72571e6002"></a><section id="detail_d72571e6002">
+            </section><a class="anchor" id="detail_d72589e6004"></a><section id="detail_d72589e6004">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1193,7 +1193,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d72571e6187"></a><section id="detail_d72571e6187">
+         </section><a class="anchor" id="detail_d72589e6189"></a><section id="detail_d72589e6189">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1230,7 +1230,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d72571e6372"></a><section id="detail_d72571e6372">
+         </section><a class="anchor" id="detail_d72589e6374"></a><section id="detail_d72589e6374">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1268,7 +1268,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d72571e6557"></a><section id="detail_d72571e6557">
+         </section><a class="anchor" id="detail_d72589e6559"></a><section id="detail_d72589e6559">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1305,7 +1305,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d72571e6742"></a><section id="detail_d72571e6742">
+         </section><a class="anchor" id="detail_d72589e6744"></a><section id="detail_d72589e6744">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2226,7 +2226,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d72571e12844"></a><section id="detail_d72571e12844">
+            </section><a class="anchor" id="detail_d72589e12846"></a><section id="detail_d72589e12846">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5242,6 +5242,14 @@
                   <tr>
                      <th>Type gegeven</th>
                      <td>Attribuut van Verkenning</td>
+                  </tr>
+                  <tr>
+                     <th>Definitie</th>
+                     <td>
+                        
+                        <p>CONCEPT De identificatie van een registratieobject binnen het registratiedomein bodem-
+                           en grondonderzoek of Milieukwaliteit in de registratie ondergrond. CONCEPT</p>
+                        </td>
                   </tr>
                   <tr>
                      <th>Juridische status</th>
