--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230809-121214</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230809-122407</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1179,7 +1179,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d72571e6002"></a><section id="detail_d72571e6002">
+                     </section><a class="anchor" id="detail_d72589e6004"></a><section id="detail_d72589e6004">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1217,7 +1217,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d72571e6187"></a><section id="detail_d72571e6187">
+                  </section><a class="anchor" id="detail_d72589e6189"></a><section id="detail_d72589e6189">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1254,7 +1254,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d72571e6372"></a><section id="detail_d72571e6372">
+                  </section><a class="anchor" id="detail_d72589e6374"></a><section id="detail_d72589e6374">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1292,7 +1292,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d72571e6557"></a><section id="detail_d72571e6557">
+                  </section><a class="anchor" id="detail_d72589e6559"></a><section id="detail_d72589e6559">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1329,7 +1329,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d72571e6742"></a><section id="detail_d72571e6742">
+                  </section><a class="anchor" id="detail_d72589e6744"></a><section id="detail_d72589e6744">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2250,7 +2250,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d72571e12844"></a><section id="detail_d72571e12844">
+                     </section><a class="anchor" id="detail_d72589e12846"></a><section id="detail_d72589e12846">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5266,6 +5266,14 @@
                            <tr>
                               <th>Type gegeven</th>
                               <td>Attribuut van Verkenning</td>
+                           </tr>
+                           <tr>
+                              <th>Definitie</th>
+                              <td>
+                                 
+                                 <p>CONCEPT De identificatie van een registratieobject binnen het registratiedomein bodem-
+                                    en grondonderzoek of Milieukwaliteit in de registratie ondergrond. CONCEPT</p>
+                                 </td>
                            </tr>
                            <tr>
                               <th>Juridische status</th>
