--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1155,7 +1155,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d72589e6004"></a><section id="detail_d72589e6004">
+            </section><a class="anchor" id="detail_d72716e6004"></a><section id="detail_d72716e6004">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1193,7 +1193,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d72589e6189"></a><section id="detail_d72589e6189">
+         </section><a class="anchor" id="detail_d72716e6189"></a><section id="detail_d72716e6189">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1230,7 +1230,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d72589e6374"></a><section id="detail_d72589e6374">
+         </section><a class="anchor" id="detail_d72716e6374"></a><section id="detail_d72716e6374">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1268,7 +1268,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d72589e6559"></a><section id="detail_d72589e6559">
+         </section><a class="anchor" id="detail_d72716e6559"></a><section id="detail_d72716e6559">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1305,7 +1305,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d72589e6744"></a><section id="detail_d72589e6744">
+         </section><a class="anchor" id="detail_d72716e6744"></a><section id="detail_d72716e6744">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2226,7 +2226,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d72589e12846"></a><section id="detail_d72589e12846">
+            </section><a class="anchor" id="detail_d72716e12846"></a><section id="detail_d72716e12846">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -7238,6 +7238,16 @@
                <td>
                   
                   <p>De onderhoudende instantie van de grondwater­monitoring­put is gewijzigd.</p>
+                  </td>
+            </tr>
+            <tr>
+               <td>verkenningenActherafRegistreren</td>
+               <td>✔</td>
+               <td>✔</td>
+               <td>
+                  
+                  <p>CONCEPT Deze gebeurtenis maakt het mogelijk om achteraf een/meerdere verkenning(en)
+                     'toe te voegen' aan de grondwatermonitoringput. CONCEPT</p>
                   </td>
             </tr>
          </tbody>
