--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230809-122407</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230810-082545</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1179,7 +1179,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d72589e6004"></a><section id="detail_d72589e6004">
+                     </section><a class="anchor" id="detail_d72716e6004"></a><section id="detail_d72716e6004">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1217,7 +1217,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d72589e6189"></a><section id="detail_d72589e6189">
+                  </section><a class="anchor" id="detail_d72716e6189"></a><section id="detail_d72716e6189">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1254,7 +1254,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d72589e6374"></a><section id="detail_d72589e6374">
+                  </section><a class="anchor" id="detail_d72716e6374"></a><section id="detail_d72716e6374">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1292,7 +1292,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d72589e6559"></a><section id="detail_d72589e6559">
+                  </section><a class="anchor" id="detail_d72716e6559"></a><section id="detail_d72716e6559">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1329,7 +1329,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d72589e6744"></a><section id="detail_d72589e6744">
+                  </section><a class="anchor" id="detail_d72716e6744"></a><section id="detail_d72716e6744">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2250,7 +2250,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d72589e12846"></a><section id="detail_d72589e12846">
+                     </section><a class="anchor" id="detail_d72716e12846"></a><section id="detail_d72716e12846">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -7264,6 +7264,16 @@
                      <td>
                         
                         <p>De onderhoudende instantie van de grondwater­monitoring­put is gewijzigd.</p>
+                        </td>
+                  </tr>
+                  <tr>
+                     <td>verkenningenActherafRegistreren</td>
+                     <td>✔</td>
+                     <td>✔</td>
+                     <td>
+                        
+                        <p>CONCEPT Deze gebeurtenis maakt het mogelijk om achteraf een/meerdere verkenning(en)
+                           'toe te voegen' aan de grondwatermonitoringput. CONCEPT</p>
                         </td>
                   </tr>
                </tbody>
