Toevoegen sectie Verkenningen als normatieve sub sectie in werkversie GMW Catalogus.

--- a/data/Belangrijkste entiteiten.html
+++ b/data/Belangrijkste entiteiten.html
@@ -91,5 +91,24 @@
 				</li>
 			</ol>
 		</section>
+		<section id="Verkenning">
+			<h4>Verkenning</h4>
+			<p>CONCEPT Een grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en). 
+Een verkenning is bijvoorbeeld een booronderzoek (BHR), een sondeeronderzoek (CPT), of een milieuhygienisch bodemonderzoek (SAD). Dergelijke verkenningen worden in de basisregistratie ondergrond geregistreerd in de domeinen bodem- en grondonderzoek en milieukwaliteit.
+In het domeinmodel van de grondwatermonitoringput wordt, aan de hand van het identificerende (BHR/CPT/SAD) BRO-ID, een verwijzing opgenomen naar de gerelateerde verkenning.
+Met het vastleggen van gerelateerde verkenning(en) kan een gebruiker makkelijker achterhalen wat bijvoorbeeld de samenstelling van de ondergrond is op de plaats van de grondwatermonitoringput, hoe diep er geboord is of welk aanvulmateriaal er gebruikt is.
+
+Er kunnen meerdere verkenningen zijn uitgevoerd. Het is bijvoorbeeld denkbaar dat de boormonsterbeschrijving vanuit meerdere vakgebieden wordt geproduceerd en dat monsteranalyses opvolgend worden uitgevoerd, waardoor nieuwe booronderzoeken kunnen ontstaan van 1 boring.
+
+Enkel 'procesgedreven' verkenning(en) zijn in scope. Dit zijn de verkenning(en) die direct gerelateerd zijn aan het proces waarmee de constructie van een grondwatermonitoringput wordt ingericht.
+Het gaat hierbij om de booronderzoek(en) (BHR) die het boorgat beschrijven waarin de put is ingericht, of de sondeeronderzoek(en) (CPT) die zijn gemeten met de sondeerstang waarmee de put in de grond is gedrukt, of het booronderzoek dat hoort bij een milieuhygienisch bodemonderzoek (SAD).
+
+Mogelijk zijn deze 'procesgedreven' verkenning(en) niet altijd beschikbaar in de basisregistratie ondergrond. Bijvoorbeeld doordat het proces van boorbeschrijven nog op zich laat wachten, of vanwege het ontbreken van de geëigende BHR standaard, of doordat deze niet in de basisregistratie ondergrond zijn geregistreerd.
+Er is verkend om in dergelijke gevallen een bronhouder de mogelijkheid te bieden om een andere, nabijgelegen verkenning te registreren, die gegevensinhoudelijk representatief is voor de ontbrekende 'procesgedreven' verkenning(en).
+Gekozen is om 'representatieve' (nabijgelegen) verkenningen buiten scope te stellen. Dit berust namelijk op een interpretatie, waarvoor de basisregistratie ondergrond in principe niet is bedoeld. Indien gewenst kan een gebruiker, op basis van geografische 'analyses', deze interpretatieve koppeling zelf maken.
+
+Voor nieuw te registreren grondwatermonitoringputten, is het verplicht om de gerelateerde verkenning(en) te registreren, mits deze 'procesgedreven' verkenning(en) beschikbaar zijn in de basisregistratie ondergrond.
+Voor grondwatermonitoringputten die reeds zijn geregistreerd in de basisregistratie ondergrond, kunnen de gerelateerde verkenning(en), indien gewenst, achteraf worden toegevoegd. CONCEPT</p>
+		</section>
 	</body>
 </html>
