--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -5323,17 +5323,13 @@
                   <th>Toelichting</th>
                   <td>
                      
-                     <p>CONCEPT Enkel 'procesgedreven' verkenningen zijn in scope. Het gaat hierbij om de
-                        booronderzoek(en) (BHR) die het boorgat beschrijven waarin de put is ingericht, of
-                        de sondeeronderzoek(en) (CPT) die zijn gemeten met de sondeerstang waarmee de put
-                        in de grond is gedrukt, of het booronderzoek dat hoort bij een milieuhygienisch bodemonderzoek
-                        (SAD).
-                        'Representatieve' (nabijgelegen) verkenningen zijn buiten scope gesteld. </p>
-                     
-                     <p>Er kunnen meerdere verkenningen zijn uitgevoerd. Het is bijvoorbeeld denkbaar dat
-                        de boormonsterbeschrijving vanuit meerdere vakgebieden wordt geproduceerd en dat monsteranalyses
-                        opvolgend worden uitgevoerd, waardoor nieuwe booronderzoeken kunnen ontstaan van 1
-                        boring. Elke gerelateerde verkenning kan worden geregistreerd. CONCEPT</p>
+                     <p>CONCEPT Enkel 'procesgedreven' verkenning(en) zijn in scope. Dit zijn de verkenning(en)
+                        die direct gerelateerd zijn aan het proces waarmee de constructie van een grondwatermonitoringput
+                        wordt ingericht. Het gaat hierbij om de booronderzoek(en) (BHR) die het boorgat beschrijven
+                        waarin de put is ingericht, de sondeeronderzoek(en) (CPT) die zijn gemeten met de
+                        sondeerstang waarmee de put in de grond is gedrukt, of de milieuhygienische bodemonderzoek(en)
+                        (SAD) waarin de boring is opgenomen waarin de put is ingericht.
+                        'Representatieve' (nabijgelegen) verkenningen zijn buiten scope gesteld. CONCEPT</p>
                      </td>
                </tr>
             </tbody>
