--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1263,7 +1263,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d74218e4981">
+         <section id="detail_d74222e4981">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1302,7 +1302,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d74218e5166">
+         <section id="detail_d74222e5166">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1340,7 +1340,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d74218e5351">
+         <section id="detail_d74222e5351">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1379,7 +1379,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d74218e5536">
+         <section id="detail_d74222e5536">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1417,7 +1417,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d74218e5721">
+         <section id="detail_d74222e5721">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2357,7 +2357,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d74218e8819">
+         <section id="detail_d74222e8819">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -6251,7 +6251,10 @@
          <colgroup></colgroup>
          <tbody>
             <tr>
-               <td></td>
+               <td>
+                  
+                  <p>De lijst met vormen van filterbescherming.</p>
+                  </td>
             </tr>
          </tbody>
       </table>
