--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-052934</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-053734</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1287,7 +1287,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d74218e4981">
+                  <section id="detail_d74222e4981">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1326,7 +1326,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74218e5166">
+                  <section id="detail_d74222e5166">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1364,7 +1364,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74218e5351">
+                  <section id="detail_d74222e5351">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1403,7 +1403,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74218e5536">
+                  <section id="detail_d74222e5536">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1441,7 +1441,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74218e5721">
+                  <section id="detail_d74222e5721">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2381,7 +2381,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d74218e8819">
+                  <section id="detail_d74222e8819">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -6277,7 +6277,10 @@
                <colgroup></colgroup>
                <tbody>
                   <tr>
-                     <td></td>
+                     <td>
+                        
+                        <p>De lijst met vormen van filterbescherming.</p>
+                        </td>
                   </tr>
                </tbody>
             </table>
