--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-053734</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-065158</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1287,7 +1287,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d74222e4981">
+                  <section id="detail_d74276e4981">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1326,7 +1326,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74222e5166">
+                  <section id="detail_d74276e5166">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1364,7 +1364,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74222e5351">
+                  <section id="detail_d74276e5351">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1403,7 +1403,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74222e5536">
+                  <section id="detail_d74276e5536">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1441,7 +1441,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74222e5721">
+                  <section id="detail_d74276e5721">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2381,7 +2381,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d74222e8819">
+                  <section id="detail_d74276e8819">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4478,6 +4478,13 @@
                               <td>Waardelijst uitbreidbaar</td>
                            </tr>
                            <tr>
+                              <th>Regels</th>
+                              <td>
+                                 
+                                 <p>Het attribuut mag niet aanwezig zijn wanneer de waarde van het attribuut <em>buistype</em> gelijk is aan <em>filterlozeBuis</em>.</p>
+                                 </td>
+                           </tr>
+                           <tr>
                               <th>Materiële geschiedenis</th>
                               <td>Nee</td>
                            </tr>
@@ -4530,6 +4537,15 @@
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
                               <td>Waardelijst uitbreidbaar</td>
+                           </tr>
+                           <tr>
+                              <th>Regels</th>
+                              <td>
+                                 
+                                 <p>De waarde van het attribuut mag niet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em>, <em>filterkousMetOpvulling</em> of <em>onbekend</em>. 
+                                    De waarde van het attribuut mag niet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>onbekend</em>. 
+                                    De waarde van het attribuut mag niet gelijk zijn aan <em>onbekend</em> wanneer de waarde van het attribuut <em>filterbescherming</em> niet gelijk is aan <em>onbekend</em>.</p>
+                                 </td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
