--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1263,7 +1263,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d74222e4981">
+         <section id="detail_d74276e4981">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1302,7 +1302,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d74222e5166">
+         <section id="detail_d74276e5166">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1340,7 +1340,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d74222e5351">
+         <section id="detail_d74276e5351">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1379,7 +1379,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d74222e5536">
+         <section id="detail_d74276e5536">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1417,7 +1417,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d74222e5721">
+         <section id="detail_d74276e5721">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2357,7 +2357,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d74222e8819">
+         <section id="detail_d74276e8819">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4454,6 +4454,13 @@
                      <td>Waardelijst uitbreidbaar</td>
                   </tr>
                   <tr>
+                     <th>Regels</th>
+                     <td>
+                        
+                        <p>Het attribuut mag niet aanwezig zijn wanneer de waarde van het attribuut <em>buistype</em> gelijk is aan <em>filterlozeBuis</em>.</p>
+                        </td>
+                  </tr>
+                  <tr>
                      <th>Materiële geschiedenis</th>
                      <td>Nee</td>
                   </tr>
@@ -4506,6 +4513,15 @@
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
                      <td>Waardelijst uitbreidbaar</td>
+                  </tr>
+                  <tr>
+                     <th>Regels</th>
+                     <td>
+                        
+                        <p>De waarde van het attribuut mag niet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em>, <em>filterkousMetOpvulling</em> of <em>onbekend</em>. 
+                           De waarde van het attribuut mag niet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>onbekend</em>. 
+                           De waarde van het attribuut mag niet gelijk zijn aan <em>onbekend</em> wanneer de waarde van het attribuut <em>filterbescherming</em> niet gelijk is aan <em>onbekend</em>.</p>
+                        </td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
