--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-065158</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-065637</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -4542,8 +4542,8 @@
                               <th>Regels</th>
                               <td>
                                  
-                                 <p>De waarde van het attribuut mag niet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em>, <em>filterkousMetOpvulling</em> of <em>onbekend</em>. 
-                                    De waarde van het attribuut mag niet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>onbekend</em>. 
+                                 <p>De waarde van het attribuut mag niet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em>, <em>filterkousMetOpvulling</em> of <em>onbekend</em>.<br clear="none">
+                                    De waarde van het attribuut mag niet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>onbekend</em>.<br clear="none">
                                     De waarde van het attribuut mag niet gelijk zijn aan <em>onbekend</em> wanneer de waarde van het attribuut <em>filterbescherming</em> niet gelijk is aan <em>onbekend</em>.</p>
                                  </td>
                            </tr>
