--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -4518,8 +4518,8 @@
                      <th>Regels</th>
                      <td>
                         
-                        <p>De waarde van het attribuut mag niet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em>, <em>filterkousMetOpvulling</em> of <em>onbekend</em>. 
-                           De waarde van het attribuut mag niet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>onbekend</em>. 
+                        <p>De waarde van het attribuut mag niet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em>, <em>filterkousMetOpvulling</em> of <em>onbekend</em>.<br clear="none">
+                           De waarde van het attribuut mag niet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>onbekend</em>.<br clear="none">
                            De waarde van het attribuut mag niet gelijk zijn aan <em>onbekend</em> wanneer de waarde van het attribuut <em>filterbescherming</em> niet gelijk is aan <em>onbekend</em>.</p>
                         </td>
                   </tr>
