--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -4470,7 +4470,10 @@
                         
                         <p>Het onderscheid met het gegeven <em>aanvulmateriaal buis</em> is dat aanvulmateriaal ervoor zorgt dat er geen verhindering is voor het instromen
                            van water in de monitoringbuis en dat filterbescherming verstopping van het filter
-                           voorkomt.</p>
+                           voorkomt.<br clear="none">
+                           Het attribuut <em>filterbescherming</em> is optioneel omdat het in een latere versie van de catalogus is toegevoegd. Voor
+                           een grondwatermonitoringput die vanaf die versie van de catalogus is geregistreerd,
+                           wordt verwacht dat de bronhouder het gegeven aanlevert.</p>
                         </td>
                   </tr>
                </tbody>
@@ -4518,9 +4521,9 @@
                      <th>Regels</th>
                      <td>
                         
-                        <p>De waarde van het attribuut mag niet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em>, <em>filterkousMetOpvulling</em> of <em>onbekend</em>.<br clear="none">
-                           De waarde van het attribuut mag niet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>onbekend</em>.<br clear="none">
-                           De waarde van het attribuut mag niet gelijk zijn aan <em>onbekend</em> wanneer de waarde van het attribuut <em>filterbescherming</em> niet gelijk is aan <em>onbekend</em>.</p>
+                        <p>De waarde van het attribuut moet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>geen</em>.<br clear="none">
+                           De waarde van het attribuut moet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em> of <em>filterkousMetOpvulling</em>.<br clear="none">
+                           De waarde van het attribuut moet gelijk zijn aan <em>onbekend</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>onbekend</em>.</p>
                         </td>
                   </tr>
                   <tr>
