--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-065637</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-090631</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -4494,7 +4494,10 @@
                                  
                                  <p>Het onderscheid met het gegeven <em>aanvulmateriaal buis</em> is dat aanvulmateriaal ervoor zorgt dat er geen verhindering is voor het instromen
                                     van water in de monitoringbuis en dat filterbescherming verstopping van het filter
-                                    voorkomt.</p>
+                                    voorkomt.<br clear="none">
+                                    Het attribuut <em>filterbescherming</em> is optioneel omdat het in een latere versie van de catalogus is toegevoegd. Voor
+                                    een grondwatermonitoringput die vanaf die versie van de catalogus is geregistreerd,
+                                    wordt verwacht dat de bronhouder het gegeven aanlevert.</p>
                                  </td>
                            </tr>
                         </tbody>
@@ -4542,9 +4545,9 @@
                               <th>Regels</th>
                               <td>
                                  
-                                 <p>De waarde van het attribuut mag niet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em>, <em>filterkousMetOpvulling</em> of <em>onbekend</em>.<br clear="none">
-                                    De waarde van het attribuut mag niet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>onbekend</em>.<br clear="none">
-                                    De waarde van het attribuut mag niet gelijk zijn aan <em>onbekend</em> wanneer de waarde van het attribuut <em>filterbescherming</em> niet gelijk is aan <em>onbekend</em>.</p>
+                                 <p>De waarde van het attribuut moet gelijk zijn aan <em>geen</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterZonderFilterkous</em> of <em>geen</em>.<br clear="none">
+                                    De waarde van het attribuut moet gelijk zijn aan <em>kopergaas</em>, <em>nylon</em> of <em>pp</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>dubbelwandigFilterMetFilterkous</em>, <em>filterkousZonderOpvulling</em> of <em>filterkousMetOpvulling</em>.<br clear="none">
+                                    De waarde van het attribuut moet gelijk zijn aan <em>onbekend</em> wanneer de waarde van het attribuut <em>filterbescherming</em> gelijk is aan <em>onbekend</em>.</p>
                                  </td>
                            </tr>
                            <tr>
