--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230901-090631</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230906-052608</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -4492,10 +4492,7 @@
                               <th>Toelichting</th>
                               <td>
                                  
-                                 <p>Het onderscheid met het gegeven <em>aanvulmateriaal buis</em> is dat aanvulmateriaal ervoor zorgt dat er geen verhindering is voor het instromen
-                                    van water in de monitoringbuis en dat filterbescherming verstopping van het filter
-                                    voorkomt.<br clear="none">
-                                    Het attribuut <em>filterbescherming</em> is optioneel omdat het in een latere versie van de catalogus is toegevoegd. Voor
+                                 <p>Het attribuut <em>filterbescherming</em> is optioneel omdat het in een latere versie van de catalogus is toegevoegd. Voor
                                     een grondwatermonitoringput die vanaf die versie van de catalogus is geregistreerd,
                                     wordt verwacht dat de bronhouder het gegeven aanlevert.</p>
                                  </td>
