--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -14,8 +14,8 @@
    </head>
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
-      <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230906-052608</p>
+      <p>Imvertor: Nightly-build.10</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230920-062348</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -159,8 +159,7 @@
                </section>
                <section id="global_class_Model_Grondwatermonitoringput">
                   <h3>   Grondwatermonitoringput</h3>
-                  <div class="imageinfo "><img src="Images/EAID_E2F8B220_F519_4d40_95F0_A8B809943E17.png" usemap="#imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17" alt="Diagram "><map name="imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17"><area shape="rect" alt="Monitoringbuis" coords="533,671,724,739" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Putgeschiedenis" coords="14,348,369,511" href="#global_class_Model_Putgeschiedenis"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,369,313" href="#global_class_Model_Registratiegeschiedenis"><area shape="rect" alt="Gestandaardiseerde locatie" coords="888,372,1312,511" href="#global_class_Model_Gestandaardiseerdelocatie"><area shape="rect" alt="Aangeleverde verticale positie" coords="888,175,1312,350" href="#global_class_Model_Aangeleverdeverticalepositie"><area shape="rect" alt="Aangeleverde locatie" coords="888,14,1312,153" href="#global_class_Model_Aangeleverdelocatie"><area shape="rect" alt="Grondwatermonitoringput" coords="437,14,827,600" href="#global_class_Model_Grondwatermonitoringput"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_E2F8B220_F519_4d40_95F0_A8B809943E17.png" usemap="#imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -1287,7 +1286,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d74276e4981">
+                  <section id="detail_d74395e4981">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1326,7 +1325,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74276e5166">
+                  <section id="detail_d74395e5166">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1364,7 +1363,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74276e5351">
+                  <section id="detail_d74395e5351">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1403,7 +1402,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74276e5536">
+                  <section id="detail_d74395e5536">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1441,7 +1440,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d74276e5721">
+                  <section id="detail_d74395e5721">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1569,8 +1568,7 @@
                </section>
                <section id="global_class_Model_Registratiegeschiedenis">
                   <h3>   Registratiegeschiedenis</h3>
-                  <div class="imageinfo "><img src="Images/EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48.png" usemap="#imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48" alt="Diagram "><map name="imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,355,313" href="#global_class_Model_Registratiegeschiedenis"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48.png" usemap="#imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -2231,8 +2229,7 @@
                </section>
                <section id="global_class_Model_Putgeschiedenis">
                   <h3>   Putgeschiedenis</h3>
-                  <div class="imageinfo "><img src="Images/EAID_F491E7BC_9174_493e_8900_A93E168044E3.png" usemap="#imagemap-EAID_F491E7BC_9174_493e_8900_A93E168044E3" alt="Diagram "><map name="imagemap-EAID_F491E7BC_9174_493e_8900_A93E168044E3"><area shape="rect" alt="Tussentijdse gebeurtenis" coords="410,14,670,135" href="#global_class_Model_Tussentijdsegebeurtenis"><area shape="rect" alt="Putgeschiedenis" coords="14,14,369,176" href="#global_class_Model_Putgeschiedenis"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_F491E7BC_9174_493e_8900_A93E168044E3.png" usemap="#imagemap-EAID_F491E7BC_9174_493e_8900_A93E168044E3" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -2381,7 +2378,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d74276e8819">
+                  <section id="detail_d74395e8819">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2423,8 +2420,7 @@
                </section>
                <section id="global_class_Model_Tussentijdsegebeurtenis">
                   <h3>   Tussentijdse gebeurtenis</h3>
-                  <div class="imageinfo "><img src="Images/EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4.png" usemap="#imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4" alt="Diagram "><map name="imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4"><area shape="rect" alt="Tussentijdse gebeurtenis" coords="14,14,273,137" href="#global_class_Model_Tussentijdsegebeurtenis"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4.png" usemap="#imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -2558,8 +2554,7 @@
                </section>
                <section id="global_class_Model_Aangeleverdelocatie">
                   <h3>   Aangeleverde locatie</h3>
-                  <div class="imageinfo "><img src="Images/EAID_5CF001A8_637A_490e_83CC_A7034AAB6FFF.png" usemap="#imagemap-EAID_5CF001A8_637A_490e_83CC_A7034AAB6FFF" alt="Diagram "><map name="imagemap-EAID_5CF001A8_637A_490e_83CC_A7034AAB6FFF"><area shape="rect" alt="Aangeleverde locatie" coords="14,14,353,153" href="#global_class_Model_Aangeleverdelocatie"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_5CF001A8_637A_490e_83CC_A7034AAB6FFF.png" usemap="#imagemap-EAID_5CF001A8_637A_490e_83CC_A7034AAB6FFF" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -2750,8 +2745,7 @@
                </section>
                <section id="global_class_Model_Aangeleverdeverticalepositie">
                   <h3>   Aangeleverde verticale positie</h3>
-                  <div class="imageinfo "><img src="Images/EAID_734BFB64_13C0_4362_B321_437338E73F92.png" usemap="#imagemap-EAID_734BFB64_13C0_4362_B321_437338E73F92" alt="Diagram "><map name="imagemap-EAID_734BFB64_13C0_4362_B321_437338E73F92"><area shape="rect" alt="Aangeleverde verticale positie" coords="14,14,465,189" href="#global_class_Model_Aangeleverdeverticalepositie"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_734BFB64_13C0_4362_B321_437338E73F92.png" usemap="#imagemap-EAID_734BFB64_13C0_4362_B321_437338E73F92" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -3072,8 +3066,7 @@
                </section>
                <section id="global_class_Model_Gestandaardiseerdelocatie">
                   <h3>   Gestandaardiseerde locatie</h3>
-                  <div class="imageinfo "><img src="Images/EAID_7CCA0259_8CE9_45d4_96F7_7FAF6268846C.png" usemap="#imagemap-EAID_7CCA0259_8CE9_45d4_96F7_7FAF6268846C" alt="Diagram "><map name="imagemap-EAID_7CCA0259_8CE9_45d4_96F7_7FAF6268846C"><area shape="rect" alt="Gestandaardiseerde locatie" coords="14,14,350,153" href="#global_class_Model_Gestandaardiseerdelocatie"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_7CCA0259_8CE9_45d4_96F7_7FAF6268846C.png" usemap="#imagemap-EAID_7CCA0259_8CE9_45d4_96F7_7FAF6268846C" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -3247,8 +3240,7 @@
                </section>
                <section id="global_class_Model_Monitoringbuis">
                   <h3>   Monitoringbuis</h3>
-                  <div class="imageinfo "><img src="Images/EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F.png" usemap="#imagemap-EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F" alt="Diagram "><map name="imagemap-EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F"><area shape="rect" alt="Monitoringbuis" coords="14,14,519,313" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="14,383,205,451" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="668,243,860,312" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="668,128,860,197" href="#global_class_Model_Zandvang"><area shape="rect" alt="Geo-ohmkabel" coords="668,14,860,82" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="178,485,342,553" href="#global_class_Model_Filter"><area shape="rect" alt="Stijgbuisdeel" coords="328,588,506,656" href="#global_class_Model_Stijgbuisdeel"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F.png" usemap="#imagemap-EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -4166,8 +4158,7 @@
                </section>
                <section id="global_class_Model_Toegepastmateriaal">
                   <h3>   Toegepast materiaal</h3>
-                  <div class="imageinfo "><img src="Images/EAID_A71456B5_9C82_401c_941E_C9D77CB4EAC2.png" usemap="#imagemap-EAID_A71456B5_9C82_401c_941E_C9D77CB4EAC2" alt="Diagram "><map name="imagemap-EAID_A71456B5_9C82_401c_941E_C9D77CB4EAC2"><area shape="rect" alt="Toegepast materiaal" coords="14,14,302,153" href="#global_class_Model_Toegepastmateriaal"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_A71456B5_9C82_401c_941E_C9D77CB4EAC2.png" usemap="#imagemap-EAID_A71456B5_9C82_401c_941E_C9D77CB4EAC2" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -4340,8 +4331,7 @@
                </section>
                <section id="global_class_Model_Filter">
                   <h3>   Filter</h3>
-                  <div class="imageinfo "><img src="Images/EAID_1AFDACA5_B09C_4cd5_AEDD_7D301405094E.png" usemap="#imagemap-EAID_1AFDACA5_B09C_4cd5_AEDD_7D301405094E" alt="Diagram "><map name="imagemap-EAID_1AFDACA5_B09C_4cd5_AEDD_7D301405094E"><area shape="rect" alt="Filter" coords="14,14,287,189" href="#global_class_Model_Filter"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_1AFDACA5_B09C_4cd5_AEDD_7D301405094E.png" usemap="#imagemap-EAID_1AFDACA5_B09C_4cd5_AEDD_7D301405094E" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -4691,8 +4681,7 @@
                </section>
                <section id="global_class_Model_Stijgbuisdeel">
                   <h3>   Stijgbuisdeel</h3>
-                  <div class="imageinfo "><img src="Images/EAID_2E51AF7A_28A4_4a25_99BD_1E5319C70963.png" usemap="#imagemap-EAID_2E51AF7A_28A4_4a25_99BD_1E5319C70963" alt="Diagram "><map name="imagemap-EAID_2E51AF7A_28A4_4a25_99BD_1E5319C70963"><area shape="rect" alt="Stijgbuisdeel" coords="14,14,250,137" href="#global_class_Model_Stijgbuisdeel"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_2E51AF7A_28A4_4a25_99BD_1E5319C70963.png" usemap="#imagemap-EAID_2E51AF7A_28A4_4a25_99BD_1E5319C70963" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -4794,8 +4783,7 @@
                </section>
                <section id="global_class_Model_Zandvang">
                   <h3>   Zandvang</h3>
-                  <div class="imageinfo "><img src="Images/EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272.png" usemap="#imagemap-EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272" alt="Diagram "><map name="imagemap-EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272"><area shape="rect" alt="Zandvang" coords="14,14,236,137" href="#global_class_Model_Zandvang"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272.png" usemap="#imagemap-EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -4883,8 +4871,7 @@
                </section>
                <section id="global_class_Model_Geoohmkabel">
                   <h3>   Geo-ohmkabel</h3>
-                  <div class="imageinfo "><img src="Images/EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063.png" usemap="#imagemap-EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063" alt="Diagram "><map name="imagemap-EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063"><area shape="rect" alt="Elektrode" coords="437,14,656,82" href="#global_class_Model_Elektrode"><area shape="rect" alt="Geo-ohmkabel" coords="14,14,323,137" href="#global_class_Model_Geoohmkabel"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063.png" usemap="#imagemap-EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -5019,8 +5006,7 @@
                </section>
                <section id="global_class_Model_Elektrode">
                   <h3>   Elektrode</h3>
-                  <div class="imageinfo "><img src="Images/EAID_73750F27_0581_4179_AF94_5B291D5F052C.png" usemap="#imagemap-EAID_73750F27_0581_4179_AF94_5B291D5F052C" alt="Diagram "><map name="imagemap-EAID_73750F27_0581_4179_AF94_5B291D5F052C"><area shape="rect" alt="Elektrode" coords="14,14,369,171" href="#global_class_Model_Elektrode"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_73750F27_0581_4179_AF94_5B291D5F052C.png" usemap="#imagemap-EAID_73750F27_0581_4179_AF94_5B291D5F052C" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -5275,8 +5261,7 @@
                </section>
                <section id="global_class_Model_Ingeplaatstdeel">
                   <h3>   Ingeplaatst deel</h3>
-                  <div class="imageinfo "><img src="Images/EAID_E951E882_CE18_4fd1_9EAB_382EC230E71B.png" usemap="#imagemap-EAID_E951E882_CE18_4fd1_9EAB_382EC230E71B" alt="Diagram "><map name="imagemap-EAID_E951E882_CE18_4fd1_9EAB_382EC230E71B"><area shape="rect" alt="Ingeplaatst deel" coords="14,14,343,153" href="#global_class_Model_Ingeplaatstdeel"></map><p><b></b></p>
-                  </div>
+                  <div class="imageinfo "><img src="Images/EAID_E951E882_CE18_4fd1_9EAB_382EC230E71B.png" usemap="#imagemap-EAID_E951E882_CE18_4fd1_9EAB_382EC230E71B" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -7221,6 +7206,15 @@
                      <th>IMBRO</th>
                      <th>IMBRO/A</th>
                      <th>Omschrijving</th>
+                  </tr>
+                  <tr>
+                     <td>afgeleidVerschilMaaiveldBovenkantBuis</td>
+                     <td>✔</td>
+                     <td>✔</td>
+                     <td>
+                        
+                        <p>Positie bepaald door meting vanaf bovenkant buis.</p>
+                        </td>
                   </tr>
                   <tr>
                      <td>AHN2</td>
