--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.10</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230920-062348</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230921-085150</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -7208,7 +7208,7 @@
                      <th>Omschrijving</th>
                   </tr>
                   <tr>
-                     <td>afgeleidVerschilMaaiveldBovenkantBuis</td>
+                     <td>afgeleidBovenkantBuis</td>
                      <td>✔</td>
                      <td>✔</td>
                      <td>
