--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -7182,7 +7182,7 @@
                <th>Omschrijving</th>
             </tr>
             <tr>
-               <td>afgeleidVerschilMaaiveldBovenkantBuis</td>
+               <td>afgeleidBovenkantBuis</td>
                <td>✔</td>
                <td>✔</td>
                <td>
