--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.10</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230925-095010</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230926-093856</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -7414,8 +7414,8 @@
                      <td>✔</td>
                      <td>
                         
-                        <p>Het repareren van een monitoringbuis door het inplaatsen van een stijgbuisdeel met
-                           een kleinere diameter.</p>
+                        <p>Het repareren van één of meer monitoringbuizen door het inplaatsen van een stijgbuisdeel
+                           met een kleinere diameter.</p>
                         </td>
                   </tr>
                   <tr>
