--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -7388,8 +7388,8 @@
                <td>✔</td>
                <td>
                   
-                  <p>Het repareren van een monitoringbuis door het inplaatsen van een stijgbuisdeel met
-                     een kleinere diameter.</p>
+                  <p>Het repareren van één of meer monitoringbuizen door het inplaatsen van een stijgbuisdeel
+                     met een kleinere diameter.</p>
                   </td>
             </tr>
             <tr>
