--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.11</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231017-153152</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231017-153955</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -7868,8 +7868,8 @@
                      <td>✔</td>
                      <td>
                         
-                        <p>CONCEPT Deze gebeurtenis maakt het mogelijk om achteraf een/meerdere verkenning(en)
-                           'toe te voegen' aan de grondwatermonitoringput. CONCEPT</p>
+                        <p>Deze gebeurtenis maakt het mogelijk om achteraf een/meerdere verkenning(en) 'toe te
+                           voegen' aan de grondwatermonitoringput.</p>
                         </td>
                   </tr>
                </tbody>
