--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -7842,8 +7842,8 @@
                <td>✔</td>
                <td>
                   
-                  <p>CONCEPT Deze gebeurtenis maakt het mogelijk om achteraf een/meerdere verkenning(en)
-                     'toe te voegen' aan de grondwatermonitoringput. CONCEPT</p>
+                  <p>Deze gebeurtenis maakt het mogelijk om achteraf een/meerdere verkenning(en) 'toe te
+                     voegen' aan de grondwatermonitoringput.</p>
                   </td>
             </tr>
          </tbody>
